test/corpus/source.txt
================================================================================
Simple tags
================================================================================

TODO: something

XXX: fix something else.

TODO:    extra white spaces.

NOTAG:missing space

(TODO: I'm inside parentheses)

NOTE:

"NOTE: this should work!"

DEBUG: thís shoúld wórk with $weird$ symbols

--------------------------------------------------------------------------------

(source
  (tag
    (name))
  (tag
    (name))
  (tag
    (name))
  (tag
    (name))
  (tag
    (name))
  (tag
    (name))
  (tag
    (name)))

================================================================================
Decorated tags
================================================================================

TODO(stsewd): something

XXX (monday): fix something else.

TODO(@todo):    extra white spaces.

NOTAG(tag):missing space

(TODO (someone): I'm inside parentheses)

NOTE(a user):

"NOTE (a user): this should work!"

FIXME(): This isn't a valid tag (user is missing)

--------------------------------------------------------------------------------

(source
  (tag
    (name)
    (user))
  (tag
    (name)
    (user))
  (tag
    (name)
    (user))
  (tag
    (name)
    (user))
  (tag
    (name)
    (user))
  (tag
    (name)
    (user)))

================================================================================
URIS
================================================================================

TODO: http://example.com

TODO: https://example.com

Something "http://example.com"

URI: https://user:pass@example.com/org/repo/?foo=baz

(https://example.com/foo/bar/)

URI(me): (https://github.com/stsewd/?foo=bar#baz)

URLs containing stop characters (dots, slashes, etc):

- https://github.com/stsewd/tree-sitter-rst#1.1
- https://doc.rust-lang.org/std/boxed/struct.Box.html#impl-IntoIterator-for-Box%3C%5BI%5D,+A%3E
- https://web.archive.org/web/20250315035304/https://www.wikipedia.org/

URLs containing parentheses:

- https://en.wikipedia.org/wiki/ANSI_escape_code#SGR_(Select_Graphic_Rendition)_parameters
- https://en.wikipedia.org/wiki/Naming_convention_(programming)#Multiple-word_identifiers

URLs from popular markup languages:

- [Markdown](https://github.com/stsewd/tree-sitter-comment)
- `reStructuredText <https://github.com/stsewd/tree-sitter-comment>`_

URLs in prose:

Follow me in https://github.com, https://x.com, https://linkedin.com...

--------------------------------------------------------------------------------

(source
  (tag
    (name))
  (uri)
  (tag
    (name))
  (uri)
  (uri)
  (tag
    (name))
  (uri)
  (uri)
  (tag
    (name)
    (user))
  (uri)
  (uri)
  (uri)
  (uri)
  (uri)
  (uri)
  (uri)
  (uri)
  (uri)
  (uri)
  (uri))

================================================================================
Injected markdown
================================================================================

@markdown

This is text in *italics* and in **bold**. 

This is `code`.

------------------------------------------------------------------------------

(source
  (comment_markup
    (comment_markup_name)
    (comment_markup_lines) ))


================================================================================
No injected markdown
================================================================================

NOTE: This is not highlighted as markdown, because `@markdown` is not the first word.

@markdown

This is text in *italics* and in **bold**. 

This is `code`.

Follow me in https://github.com

------------------------------------------------------------------------------

 (source
    (tag
      (name))
    (uri))

================================================================================
Injected reStructuredText
================================================================================

@rst *italics* and **bolt**.

------------------------------------------------------------------------------

(source
  (comment_markup
    (comment_markup_name)
    (comment_markup_lines) ))
